force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>npo02__Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records processed at a time when calculating donor statistics.  The default size is 200.  Reduce to a smaller number if the Opportunity Rollups are failing due to system limits.</description>
    <inlineHelpText>El número de registros que se procesa a la vez cuando se calculas las estadísticas del donante. Por defecto el tamaño es de 200. Reducir a un número menor si los Totales de oportunidades están fallando debido a limites en el sistema.</inlineHelpText>
    <label>Rollup Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>