force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__DISABLE_OpportunityRollup_trigger__c.field-meta.xml
<CustomField>
    <fullName>npo02__DISABLE_OpportunityRollup_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
    <inlineHelpText>DESUSADO. El comportamiento del desencadenador está ahora controlado en la página Configuración de desencadenadores de Configuración de NPSP.</inlineHelpText>
    <label>DEPRECATED-Disable_OppRollup_trigger</label>
    <type>Checkbox</type>
</CustomField>