force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Excluded_Account_Opp_Types__c.field-meta.xml
<CustomField>
    <fullName>npo02__Excluded_Account_Opp_Types__c</fullName>
    <description>Opportunities that have this value in the Type picklist won&apos;t be included in rollups to the Account.</description>
    <inlineHelpText>Valores de el campo Tipo en oportunidad que se excluyen de las estadísticas cuando se calculan los totales de oportunidades en cuenta.</inlineHelpText>
    <label>Opp Types Excluded for Account Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>