force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Excluded_Contact_Opp_Rectypes__c.field-meta.xml
<CustomField>
    <fullName>npo02__Excluded_Contact_Opp_Rectypes__c</fullName>
    <description>Opportunities with the selected record types won&apos;t be included in rollups to the Contact. Control or Command click to select more than one record type.</description>
    <inlineHelpText>Nombre del tipo de registro de oportunidad excluidos de las estadísticas cuando se calculan los totales de oportunidades en contactos.</inlineHelpText>
    <label>Opp RecTypes Excluded for Contact Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>