force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_Creation_Excluded_Recordtypes__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_Creation_Excluded_Recordtypes__c</fullName>
    <description>Contact Record Types excluded from Household creation.  This setting is ignored if you are using the Household Account model.</description>
    <inlineHelpText>Tipos de registro de los contactos excluidos de la creación de familias. Esta configuración es ignorada si se esta utilizando el modelo de cuentas Familia.</inlineHelpText>
    <label>Household Creation Excluded Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>