force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_Mailing_List_ID__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_Mailing_List_ID__c</fullName>
    <description>The report ID of the Household Mailing List Report used for Household-deduplicated Campaign mailing lists.  Report should be of Campaigns with Contacts, where Member Status does not contain &apos;Duplicate&apos;</description>
    <inlineHelpText>El ID del informe de la lista de envío de la familia usado para la campaña lista de envío sin duplicar de la familia. El informe debe ser de Campañas con contactos, donde miembro de campaña no incluye &quot;Duplicado&quot;</inlineHelpText>
    <label>Household Mailing List Report</label>
    <length>18</length>
    <type>Text</type>
</CustomField>