force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_OCR_Excluded_Recordtypes__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_OCR_Excluded_Recordtypes__c</fullName>
    <description>The Contact Record Types you want to exclude from automatic Household Member Contact Role creation. Salesforce would then exclude those Contacts from receiving the Household Member Contact Role when the Opportunity is created.</description>
    <inlineHelpText>Tipo de registro del contacto excluido de la creación de funciones del contacto en oportunidades para familias</inlineHelpText>
    <label>Household OCR Excluded Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>