force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Household_Rules__c.field-meta.xml
<CustomField>
    <fullName>npo02__Household_Rules__c</fullName>
    <description>Specifies which Contacts will have Households objects automatically created for them.  Note that this is only used for Contacts using the One-to-One or Individual Account Model.  This is ignored for Contacts with the Household Account Model.</description>
    <inlineHelpText>Especifica a que contactos se les creará automáticamente un objeto familias. Notar que esto solo se utilizará para contactos que tengan el modelo de cuenta Uno-a-Uno o Individual. Esto se ignorará para contactos con el modelo de cuenta Familias.</inlineHelpText>
    <label>Household Object Rules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>