force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Max_Package_Version__c.field-meta.xml
<CustomField>
    <fullName>npo02__Max_Package_Version__c</fullName>
    <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
    <inlineHelpText>DESUSADO. Se instalarán automáticamente nuevas versiones del Nonprofit Success Pack.</inlineHelpText>
    <label>DEPRECATED-Max Package Version</label>
    <length>12</length>
    <type>Text</type>
</CustomField>