force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Membership_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>npo02__Membership_Record_Types__c</fullName>
    <defaultValue>&quot;Membership&quot;</defaultValue>
    <description>Names of Opportunity Record Types, such as Membership, that you want to roll up separately from other Opportunity Record Types.</description>
    <inlineHelpText>Nombre del tipo de registro de oportunidades, como Membresía, que se quiere que sumen a totales diferentes de otros tipos de registro de oportunidad.</inlineHelpText>
    <label>Membership Record Type Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>