force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Schedule_Job_Limit__c.field-meta.xml
<CustomField>
    <fullName>npo02__Schedule_Job_Limit__c</fullName>
    <defaultValue>25</defaultValue>
    <description>The number of active scheduled Apex Jobs to look at when scheduling new jobs.</description>
    <inlineHelpText>El número de trabajos programados de Apex activados a considerar cuando se programa un nuevo trabajo.</inlineHelpText>
    <label>Schedule Job Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>