force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Soft_Credit_Roles__c.field-meta.xml
<CustomField>
    <fullName>npo02__Soft_Credit_Roles__c</fullName>
    <description>Opportunity Contact Roles you want to include in Soft Credit rollups. Control or Command click to select multiple roles.</description>
    <inlineHelpText>Lista de funciones del contacto en la oportunidad a incluir para el calculo de totales de crédito blando.</inlineHelpText>
    <label>Soft Credit Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>