force-app/main/default/objects/npo02__Households_Settings__c/fields/npo02__Use_Fiscal_Year_for_Rollups__c.field-meta.xml
<CustomField>
    <fullName>npo02__Use_Fiscal_Year_for_Rollups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will cause Opportunity rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year.  NOTE: Custom Fiscal Year Settings are NOT supported.</description>
    <inlineHelpText>Seleccionar este campo hará que los totales en oportunidades respeten el año fiscal, en vez del año calendario. Para configurar el AF, ir a Configuración -&gt; Perfil de la compañía -&gt; Año fiscal. Nota: NO funciona con una configuración personalizada de AF</inlineHelpText>
    <label>Use Fiscal Year for Rollups</label>
    <type>Checkbox</type>
</CustomField>