force-app/main/default/objects/npo02__Households_Settings__c/fields/npsp__Matched_Donor_Role__c.field-meta.xml
<CustomField>
    <fullName>npsp__Matched_Donor_Role__c</fullName>
    <description>The Contact Role you want to use for matched donors. We recommend using &quot;Matched Donor.&quot;</description>
    <inlineHelpText>La función dada al contacto que debe recibir crédito blando por una donación complementaria.</inlineHelpText>
    <label>Matched Donor Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>