force-app/main/default/objects/npo02__Households_Settings__c/fields/npsp__Use_Dated_Conversion_Rates__c.field-meta.xml
<CustomField>
    <fullName>npsp__Use_Dated_Conversion_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque para tipos de cambio con fecha cuando Gestión de divisas avanzada está habilitada en la organización. Si se marca y ACM está habilitado, todas las totalizaciones de NPSP utilizarán el tipo de cambio predeterminado para la divisa.</inlineHelpText>
    <label>Use Dated Conversion Rates if available</label>
    <type>Checkbox</type>
</CustomField>